--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     alt="Profile Picture" class="profile-img">
     <h2 class=""name>BOB</h2>
     <p class="age">Age: 100</p>
+    <p class="city">City: BOB WORLD</p>
+    <p class="city">Nationality: AUCOUSTIC</p>
+    <p class="phonenumber">Phone Number: 911</p>
 </div>
 </body>
 </html>
