added profession , hobbies and a general summary

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <p class="city">City: BOB WORLD</p>
     <p class="city">Nationality: AUCOUSTIC</p>
     <p class="phonenumber">Phone Number: 911</p>
+    <p class="profession">Profession: Adopted</p>
+    <p class="hobbies">Hobbies: Valorant (eventhough he is shit)</p>
+    <p class="summary">Summary: bro is special and in his own seperate league</p>
 </div>
 </body>
 </html>
