added button = follow and contact

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <p class="profession">Profession: Adopted</p>
     <p class="hobbies">Hobbies: Valorant (eventhough he is shit)</p>
     <p class="summary">Summary: bro is special and in his own seperate league</p>
+    <div class="buttons">
+        <button class="btn">Contact</button>
+        <button class="btn">Follow (SPARTA)</button>
+        </div>
 </div>
 </body>
 </html>
