--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class = "profile-card">
     <h1 = "profile_card">Profile Card</h1>
-    <img src="https://images.unsplash.com/photo-1599566150163-29194dcaad36?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNzgyOXwwfDF8c2VhcmNofDN8fHBlcnNvbnxlbnwwfHx8fDE2Mjk2NjA5OTY&ixlib=rb-1.2.1&q=80&w=400"
+    <img src="https://media.licdn.com/dms/image/D4D03AQEBpq41Vz_zGQ/profile-displayphoto-shrink_200_200/0/1674898964253?e=2147483647&v=beta&t=Tx_75XYFjTOxn5vtgjwH1E02waxnSNUZ6bbadujBOFA"
     alt="Profile Picture" class="profile-img">
     <h2 class=""name>BOB</h2>
     <p class="age">Age: 100</p>
